@@ -1,11 +1,14 @@
-.\" $Id: libssh2_sftp_readdir.3,v 1.8 2007/06/13 16:41:33 jehousley Exp $
+.\" $Id: libssh2_sftp_readdir.3,v 1.9 2007/06/15 17:22:49 jehousley Exp $
 .\"
-.TH libssh2_sftp_readdir 3 "1 Jun 2007" "libssh2 0.15" "libssh2 manual"
+.TH libssh2_sftp_readdir_ex 3 "1 Jun 2007" "libssh2 0.15" "libssh2 manual"
 .SH NAME
-libssh2_sftp_readdir - read directory data from an SFTP handle
+libssh2_sftp_readdir_ex - read directory data from an SFTP handle
 .SH SYNOPSIS
 #include <libssh2.h>
 #include <libssh2_sftp.h>
+
+int 
+libssh2_sftp_readdir_ex(LIBSSH2_SFTP_HANDLE *handle, char *buffer, size_t buffer_maxlen, char *longentry, size_t longentry_maxlen, LIBSSH2_SFTP_ATTRIBUTES *attrs);
 
 int 
 libssh2_sftp_readdir(LIBSSH2_SFTP_HANDLE *handle, char *buffer, size_t buffer_maxlen, LIBSSH2_SFTP_ATTRIBUTES *attrs);
@@ -20,6 +23,13 @@ libssh2_sftp_readdir(LIBSSH2_SFTP_HANDLE *handle, char *buffer, size_t buffer_ma
 \fIbuffer_maxlen\fP - is the length of buffer in bytes. If the length of the 
 filename is longer than the space provided by buffer_maxlen it will be 
 truncated to fit.
+
+\fIlongentry\fP - is a pointer to a pre-allocated buffer of at least
+\fIlongentry_maxlen\fP bytes to read data into.
+
+\fIlongentry_maxlen\fP - is the length of longentry in bytes. If the length 
+of the full directory entry is longer than the space provided by 
+longentry_maxlen it will be truncated to fit.
 
 \fIattrs\fP - is a pointer to LIBSSH2_SFTP_ATTRIBUTES storage to populate 
 statbuf style data into.
