@@ -77,7 +77,7 @@ typedef long long libssh2_int64_t;
 #endif
 
 #define LIBSSH2_VERSION                             "0.15-CVS"
-#define LIBSSH2_APINO                               200706012030
+#define LIBSSH2_APINO                               200706151200
 
 /* Part of every banner, user specified or not */
 #define LIBSSH2_SSH_BANNER                          "SSH-2.0-libssh2_" LIBSSH2_VERSION
